Refactor with object model McAddon class

--- a/minecraft_recipe.html
+++ b/minecraft_recipe.html
@@ -720,6 +720,7 @@
         </div>
     </div>
 
+    <script src="mcaddon.js"></script>
     <script src="minecraft_recipe.js"></script>
 </body>
 </html>
